syntax = "proto3";

package coordinator;

option go_package = "github.com/harshitster/223B-Project/src/coordinator/proto;proto";

message PrepareRequest {
  string txn_id = 1;
  string key = 2;
  string new_value = 3;
}

message CommitRequest {
  string txn_id = 1;
}

message AbortRequest {
  string txn_id = 1;
}

message GetRequest {
  string key = 1;
}

message SetRequest {
  string key = 1;
  string value = 2;
}

message ValueReply {
  string value = 1;
}

message Ack {
  bool success = 1;
}

service KVServer {
  rpc Prepare(PrepareRequest) returns (Ack);
  rpc Commit(CommitRequest) returns (Ack);
  rpc Abort(AbortRequest) returns (Ack);
  rpc Get(GetRequest) returns (ValueReply);
  rpc Set(SetRequest) returns (Ack);
}
